--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Generate cache with command",
     "type": "kirby-plugin",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "authors": [
         {
             "name": "Rafael Egli",
@@ -28,7 +28,7 @@
         }
     },
     "require": {
-        "php": ">=8.2.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
         "getkirby/composer-installer": "^1.2",
         "symfony/http-client": "^7.0",
         "symfony/browser-kit": "^7.0"
