--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     },
     "require": {
-        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.3.0",
         "getkirby/composer-installer": "^1.2",
         "symfony/http-client": "^7.0",
         "symfony/browser-kit": "^7.0"
